# bayescl

./: .gitignore  LICENCE.md  LLM.md  Makefile  README.md  jobs.py  main.py  main_capymoa.py  notebook.ipynb  ols.py  pyproject.toml  requirements.txt  run.sh  study_blob.py  study_blob_a_init.py  study_blob_beta.py  update_hp.py  vbll_capymoa.py
analysis/: README.md  accuracy_calibration.ipynb  calibration.py  common.py  duration.ipynb  duration_table.tex  energy-usage.ipynb  flops.ipynb  hpsearch.ipynb  hpsearch_plot.ipynb  mvd.ipynb  plots.ipynb  reliability.ipynb  sensitivity.ipynb  style.ipynb  tables.ipynb  update_dataframes.py
bayescl/: __init__.py  base.py  batch_ensemble.py  benchmark.py  config.py  datasets.py  experiment.py  focal.py  gflop.py  model.py  strategy.py  vbnn.py
configs/: base.jsonnet  base.yaml  core50_dinov2.yaml
hpsearch/: blob.py
logbook/: mnist_naive.csv
results/: hpsearch.csv  run.csv  table-cifar100.tex  table-core50.tex  table-imagenetr.tex  tables.ipynb
sbatch/: cifar100.sl  cifar100_01_linear.sl  cifar100_02_lora.sl  cifar100_03_ball.sl  cifar100_03_blob.sl  cifar100_04_replay.sl  cifar100_05_gdumb.sl  cifar100_06_der.sl  cifar100_07_joint.sl  cifar100_08_rwalk.sl  cifar100_blob.sl  cifar100_linear.sl  cifar100_lora.sl  debug.sl  domainnet_01_linear.sl  domainnet_02_lora.sl  domainnet_03_ball.sl  domainnet_03_blob.sl  domainnet_04_replay.sl  domainnet_05_gdumb.sl  domainnet_06_der.sl  domainnet_07_joint.sl  domainnet_08_rwalk.sl  domainnet_linear.sl  domainnet_lora.sl  imagenetr_01_linear.sl  imagenetr_02_lora.sl  (+9 more)
(+386 files in other folders)
