[project]
name = "bayescl"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "avalanche-lib==0.6.0",
    "bayesianize",
    "click>=8.1.8",
    "ipykernel==7.2.0",
    "jsonnet==0.21.0",
    "loguru==0.7.3",
    "matplotlib==3.7.5",
    "omegaconf==2.3.0",
    "optuna-dashboard>=0.20.0",
    "optuna==4.7.0",
    "psycopg[binary]==3.3.3",
    "pydantic==2.11.9",
    "pymysql==1.1.2",
    "ruff==0.13.0",
    "seaborn==0.13.2",
    "setproctitle==1.3.7",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "transformers==4.47.1",
    "zeus==0.15.1",
]

[tool.uv.sources]
bayesianize = { git = "https://github.com/microsoft/bayesianize.git", rev = "6aab95e" }
